# STMATH

./: .coverage  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  map.html  pyproject.toml  setup.cfg  setup.py  test_all.py
.github/workflows/: joss.yml  paper-build.yml
docs/: API.md  generate_docs.py
paper/: paper.md  references.bib
stmath/: __init__.py  aptitude_math.py  benchmark.py  combinatorics.py  dl.py  finance_math.py  genai.py  graph.py  interpreter.py  ml.py  number_theory.py  probability.py  quantum_math.py  scientific.py  timeseries.py  utils.py  vision.py
stmath.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
stmath/core/: gradcheck.py  graph_utils.py  math_kernels.py  ops.py  tensor.py  value.py
stmath/data/: dataset.py  utils.py
stmath/engine/: adaptive.py  validator.py
stmath/genai/: attention.py  embeddings.py  ffn.py  multihead.py  normalization.py  pipeline.py  transformer.py
stmath/graph/: graph.py  pipeline.py
stmath/linalg/: decomposition.py  eigen.py  linalg.py  matrix.py  utils.py
stmath/ml/: evaluate.py  linear_regression.py  logistic_regression.py  metrics.py  model_selection.py  pipeline.py
stmath/nlp/: evaluate.py  pipeline.py  similarity.py  tokenizer.py  vectorizer.py
stmath/nn/: functional.py  layers.py  models.py  trainer.py
stmath/solvers/: big_solver.py  cg.py  decomposition.py  iterative.py  qr.py  regularized.py  small_solver.py
stmath/stats/: statistics.py
stmath/utils/: benchmark.py  constants.py  helpers.py  logger.py
stmath/vision/: filters.py  pipeline.py
stmath_old/: __init__.py  algebra.py  aptitude_math.py  benchmark.py  combinatorics.py  core.py  crypto_math.py  distributions.py  dl.py  engine.py  finance_math.py  functional.py  genai.py  graph.py  interpreter.py  linalg.py  math_ext.py  ml.py  nlp.py  number_theory.py  physics.py  probability.py  quantum.py  scientific.py  signal.py  special.py  statistics.py  symbolic.py  tensor.py  timeseries.py  utils.py  vision.py
stmath_old/nn/: functional.py  layers.py
tests/: run_all_tests.py  test_stmath.py
