[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stmath"
version = "1.0.10"
description = "The Next-Generation Unified Math + AI + ML + Quantum Engine"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Saksham Tomar", email = "saksham@example.com" }
]
requires-python = ">=3.8"
keywords = [
  "math", "ai", "ml", "quantum", "genai","crypto", "optimization", "vision", "stmath"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://github.com/stmath-org/stmath"
Documentation = "https://stmath-org.github.io/docs"
Source = "https://github.com/stmath-org/stmath"
Issues = "https://github.com/stmath-org/stmath/issues"
PyPI = "https://pypi.org/project/stmath/"
LinkedIn = "https://www.linkedin.com/in/sakshamtomar55/"
