[metadata]
name = stmath
version = 1.0.8
license = MIT
description = The Next-Generation Unified Math + AI + ML + Quantum Engine
long_description = file: README.md
long_description_content_type = text/markdown
author = Saksham Tomar
author_email = contact@stmath.org
url = https://github.com/stmath-org/stmath
keywords = math, ai, ml, quantum, crypto, optimization, vision, stmath
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development :: Libraries :: Python Modules

project_urls =
    Homepage = https://github.com/stmath-org/stmath
    Documentation = https://stmath-org.github.io/docs
    Source = https://github.com/stmath-org/stmath
    Issues = https://github.com/stmath-org/stmath/issues
    PyPI = https://pypi.org/project/stmath/
    LinkedIn = https://www.linkedin.com/in/sakshamtomar55/

[options]
packages = find:
python_requires = >=3.8
include_package_data = True

[options.extras_require]
dev =
    pytest
    black
    flake8
    mypy
docs =
    sphinx
    furo
